[project]
name = "langgraph_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohamednajdawi", email = "32543467+Mohamednajdawi@users.noreply.github.com" }
]

packages = [{ include = "langgraph_test", from = "src" }]                                                                    # insert name 
package-mode = true

requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain>=0.3.26",
    "langgraph>=0.5.2",
    "openai>=1.95.1",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "langchain-openai>=0.3.28",
    "ipython>=9.4.0",
    "ipykernel>=6.29.5",
]
